	- (EntityNPC.Pathfinder has been left unaffected for existing mod compatibility)
* GridEntity
	- Fixed HurtDamage crashing
* Console
	- Fixed a crash with RegisterMacro if no parameters were passed into it.
* Misc:
	- Modded characters locked behind achievements no longer appear in the local co-op wheel.
Modified:
* EntityFamiliar:
	- GetPathFinder -> GetPathfinder
* EntityPlayer:
	- DropCollectible now returns the spawned pedestal if one was spawned, as intended 
	- SwapForgottenForm returns boolean, depending if Forgotten/Soul form was switched or not.
	- GetSmeltedTrinkets now accepts an optional table parameter, a list of trinket IDs, to use as a filter for better performance
* Level:
	- TryPlaceRoom(AtDoor) no longer plays the key unlock sound if a room is created that connects to the player's current room.
* ImGui:
	- Adding an element with the same id as an existing one will now replace the existing element instead of throwing an error.
	- If an error is caused by a callback, imgui will now properly throw an error
* ModCallbacks:
	- MC_POST_PLAYER_TRIGGER_EFFECT_REMOVED(EntityPlayer Player, int Count)
		Added Count argument (how many instances of this effect were removed)
	- MC_PRE_MOD_UNLOAD(Mod, bool ShuttingDown)
		Added boolean argument that identifies if it is running due to game shutdown
		Now runs earlier during shutdown, so code is less likely to crash
	- MC_POST_CURSE_EVAL
		Returning a value will now pass the modified curse mask along to the next callback instead of ending the callback early.
	- MC_PRE_ADD_COLLECTIBLE
		Returning a value to modify the collectible being added will now pass that ID along to other callbacks instead of stopping.
* reloadshaders command will now reload custom anm2 shaders
* Daily goal path icon will now be displayed on Mega Satan daily runs.
/newline/
/versionseparator/
v1.0.12.e -
Fixes:
* Macs and old systems should now be compatible with REPENTOGON (we no longer use OGL 3)
/newline/
/versionseparator/
v1.0.12.d -