@@ -25,7 +25,7 @@ __thiscall bool Entity_Familiar::HandleCollision(Entity* collider, bool low);
 __thiscall void Entity_Familiar::Shoot();
 
 "558bec83e4f883ec10568bf157817e??f0000000":
-__thiscall bool Entity_Familiar::TryAimAtMarkedTarget(Vector *AimDirection, int eDirection, Vector *Unk);
+__thiscall bool Entity_Familiar::TryAimAtMarkedTarget(Vector *AimDirection, int *eDirection, Vector *TargetPosBuffer);
 
 "558bec83e4f883ec245356578bf980bf????????00":
 __thiscall void Entity_Familiar::TriggerRoomClear();
